# multiagent-platform

./: .gitignore  README.md  TECH_STACK.md  agenthive_walkthrough.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  swarm_plan.md
apps/dashboard/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/dashboard/app/: globals.css  layout.tsx
apps/dashboard/app/(hive)/: layout.tsx
apps/dashboard/app/(hive)/backlog/: page.tsx
apps/dashboard/components/: MonacoEditor.tsx  activity-feed.tsx  add-task-modal.tsx  agent-control.tsx  agent-graph.tsx  agent-tree.tsx  animated-file-tree.tsx  collaboration-feed.tsx  command-center.tsx  command-palette.tsx  file-tree.tsx  hive-control.tsx  task-bucket.tsx  terminal-output.tsx  threaded-logs.tsx  ws-status-badge.tsx  xterm-panel.tsx
apps/dashboard/lib/: dagre-layout.ts  engine-client.ts  store.ts  use-hive-socket.ts  use-sequential-spawn.ts
apps/engine/: Dockerfile  README.md  main.py  pyproject.toml  test.py  test_kimi.py  test_shell.py  validate.py
apps/engine/app/: __init__.py  bucket.py  config.py  db.py  dialogue.py  dispatcher.py  events.py  executor.py  hive.py  main.py  self_healer.py  session.py  token_optimizer.py
apps/engine/app/agents/: __init__.py  anthropic_agent.py  base.py  deepseek_agent.py  factory.py  gemini_agent.py  kimi_agent.py  openai_agent.py  prompts.py
apps/engine/app/swarm/: __init__.py  core.py  find_uiux.py  handoffs.py  inject_chat.py  rename_roles.py  routines.py
apps/engine/app/tools/: __init__.py  filesystem.py  terminal.py
workspace/: README.md
(+8 files in other folders)
